[package]
name = "swarm_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
redis = { version = "0.21", features = ["tokio-comp"] }
ring = "0.16"
x25519-dalek = "1.2"
sha2 = "0.9"
hmac = "0.11"
jsonwebtoken = "7.2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
dashmap = "5.1"
rayon = "1.5"
lru = "0.7"
prometheus = "0.13"
prometheus-exporter = "0.8"
geo = "0.23"
clap = "3.0"
config = "0.11"
num_cpus = "1.13"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
hyper = { version = "0.14", features = ["full"] }
trust-dns-resolver = "0.20"
rand = "0.8"
base64 = "0.13"
zstd = "0.11"

[dev-dependencies]
mockall = "0.11"
criterion = "0.3"
proptest = "1.0"

[[bench]]
name = "routing_benchmark"
harness = false