[package]
name = "wasp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ring = "0.16"
rand = "0.8"
futures = "0.3"
config = "0.13"
winapi = { version = "0.3", features = ["minwindef", "winnt", "securitybaseapi", "handleapi", "processthreadsapi", "tlhelp32"] }
ntapi = "0.3"
widestring = "1.0"
anyhow = "1.0"
base64 = "0.13"
aes = "0.7"
block-modes = "0.8"
md-5 = "0.10"
regex = "1.5"
warp = "0.3"
chrono = "0.4"
jsonwebtoken = "8.0"
bcrypt = "0.10"
validator = { version = "0.14", features = ["derive"] }
url = "2.2"
deadpool-postgres = "0.10"
tokio-postgres = "0.7"
reqwest = { version = "0.11", features = ["json"] }
ssh2 = "0.9"
ipnetwork = "0.18"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"